syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

enum RoomStatus {
  ROOM_STATUS_AVAILABLE = 0;
  ROOM_STATUS_OCCUPIED = 1;
  ROOM_STATUS_MAINTENANCE = 2;
  ROOM_STATUS_CLEANING = 3;
}
