syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "google/protobuf/timestamp.proto";
import "hotel/v1/enums/room_status.proto";
import "hotel/v1/enums/room_type.proto";

message CreateRoom {
  string id = 1;
  string title = 2;
  optional string description = 3;
  string room_number = 4;
  RoomStatus status = 5;
  RoomType type = 6;
  string price = 7;
  int64 capacity = 8;
  float area_sqm = 9;
  int64 floor = 10;
  repeated string amenities = 11;
  repeated string images = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}
